* 1차 버전 완료   - 초가 변경될때, 회전하는 기능 완료   - 분과 연동하도록 구현 중

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      document.onreadystatechange = function onReadyStateChange() {
+        /* if (document.readyState === 'complete') {
+          // console.log('The document ready state is "complete"');
+          document.body.style.display = '';
+          document.onreadystatechange = null;
+        }*/
+        console.log('onreadystatechange', document.readyState);
+      };
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
